objects/zkmulti__DangerousGoodsDetails__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__EmergencyContactNumber__c</fullName>
        <description>Telephone number to use for contact in the event of an emergency</description>
        <inlineHelpText>Telephone number to use for contact in the event of an emergency</inlineHelpText>
        <label>Emergency Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackagingCountUnits__c</fullName>
        <description>Units in which the dangerous goods commodity is packaged</description>
        <inlineHelpText>Units in which the dangerous goods commodity is packaged</inlineHelpText>
        <label>Packaging Count Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackagingCount__c</fullName>
        <description>Number of units, in the units specified by the Packaging Count Units</description>
        <inlineHelpText>Number of units, in the units specified by the Packaging Count Units</inlineHelpText>
        <label>Packaging Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dangerous Goods Details</label>
    <listViews>
        <fullName>Nolan_Daigle_DangerousGoodsDetails</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Dangerous Goods Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dangerous Goods Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>